--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jo930_000.albu" >
+    <uses-permission
+        android:name="android.permission.VIBRATE">
 
+    </uses-permission>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
@@ -22,6 +25,7 @@
                 <action android:name="com.tutorialspoint.CUSTOM_INTENT">
                     </action>
             </intent-filter>
+
         </activity>
 
         <receiver android:name=".AlarmReceiver" />
@@ -29,6 +33,8 @@
             android:enabled="true">
 
         </service>
+        <activity android:name=".Bye"/>
+        <activity android:name=".GameActivity"/>
     </application>
 
 </manifest>
