--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         </service>
         <activity android:name=".Bye"/>
         <activity android:name=".GameActivity"/>
+        <activity android:name=".ReadyForGameActivity"/>
     </application>
 
 </manifest>
